Make sure comments don't overlap nav

--- a/style.css
+++ b/style.css
@@ -253,13 +253,13 @@ h2.widget-title {
     padding: 0 0 0 2em;
   }
   body.page-two-column #comments {
-    float: left;
+    float: right;
     width: 70%;
     padding: 0 0 0 2em;
   }
   .site-footer .widget-column.footer-widget-2 {
     float: left;
     width: 70%;
-    padding: 0 0 0 2em;    
+    padding: 0 0 0 2em;
   }
 }
